--- a/info.yaml
+++ b/info.yaml
@@ -1,14 +1,28 @@
-# info.yaml  
-title: "ASIC Onboarding Project - Sebastian Nava Urribarri"  
-author: "Sebastian Nava Urribarri"  
-description: "SPI-controlled PWM peripheral for Tiny Tapeout."  
-top_module: "tt_um_uwasic_onboarding_seb_nava_urribarri"  # Match your top module name  
-source_files:  
-  - "spi peripheral"
-  - pwm_peripheral.v  
-  - project.v
+# Tiny Tapeout project information
+project:
+  title:        "ASIC Onboarding Project - Sebastian Nava Urribarri"      # Project title
+  author:       "Sebastian Nava Urribarri"      # Your name
+  discord:      "Lanto_"      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
+  description:  "SPI-controlled PWM peripheral for Tiny Tapeout."      # One line description of what your project does
+  language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
+  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
-# NOT REQUIRED
+  # How many tiles your design occupies? A single tile is about 167x108 uM.
+  tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
+
+  # Your top module name must start with "tt_um_". Make it unique by including your github username:
+  top_module:  "tt_um_uwasic_onboarding_Sebastian_Nava_Urribarri"
+
+  # List your project's source files here.
+  # Source files must be in ./src and you must list each source file separately, one per line.
+  # Don't forget to also update `PROJECT_SOURCES` in test/Makefile.
+  source_files:
+    - "project.v"
+    - "spi_peripheral.v"
+    - "pwm_peripheral.v"
+
+# The pinout of your project. Leave unused pins blank. DO NOT delete or add any pins.
+# This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
   ui[0]: "SCLK"
@@ -19,7 +33,7 @@ pinout:
   ui[5]: ""
   ui[6]: ""
   ui[7]: ""
-  
+
   # Outputs
   uo[0]: "OUT_0"
   uo[1]: "OUT_1"
@@ -29,7 +43,7 @@ pinout:
   uo[5]: "OUT_5"
   uo[6]: "OUT_6"
   uo[7]: "OUT_7"
-  
+
   # Bidirectional pins
   uio[0]: "OUT_8"
   uio[1]: "OUT_9"
@@ -39,3 +53,6 @@ pinout:
   uio[5]: "OUT_D"
   uio[6]: "OUT_E"
   uio[7]: "OUT_F"
+
+# Do not change!
+yaml_version: 6
